<resources>
    <string name="app_name">MyCalculator</string>
    <string name="num9">9</string>
    <string name="num7">7</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num1">1</string>
    <string name="num8">8</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num0">0</string>
    <string name="equalsBtn">=</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="a9">9</string>
    <string name="ans">ANS</string>
    <string name="btnMod" >Mod</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="btnNot">Not</string>
    <string name="xor">XOR</string>
    <string name="gcd">GCD</string>
    <string name="clear">C</string>


</resources>
